# TekvanceOperators

./: .env.example  .gitignore  README.md  gen_ui.sh  pyproject.toml
gui/modules/auth/: auth_window_ui.py
operators/: cli.py  main.py
operators/common/: api_service.py  logger.py  selenium_actions.py  system_info.py  utils.py
operators/config/: settings.json
operators/gui/: loader.py  main.py  state.py
operators/gui/auth/: auth_window.py
operators/gui/components/: run_button.py
operators/gui/modules/auth/: auth_ui.py  auth_window.py  controller.py  styles.py
operators/gui/modules/dashboard/: dashboard_ui.py  dashboard_window.py
operators/gui/tray/: tray_manager.py
operators/gui/views/: auth.ui  dashboard.ui  gen.txt
operators/robots/: registry.py
operators/robots/base/: base.py  base_bs.py  base_playwright.py  base_selenium.py
operators/robots/robot_isna/: shell.py
operators/robots/robot_knp/: brain.py  config.json  core.py  debug_run.py  driver.py  shell.py  state.py  utils.py
operators/robots/wb_scrapper/: brain.py  config.json  core.py  driver.py  shell.py
operators/tests/: test_api.py
