[tool.poetry]
name = "operators"
version = "0.1.0"
description = "Tekvance Operator (.exe-агент)"
authors = ["Mark Safin <samangelofw@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.18"
aiosignal = "1.3.2"
altgraph = "0.17.4"
async-timeout = "5.0.1"
attrs = "25.3.0"
certifi = "^2025.6.15"
charset-normalizer = "3.4.2"
frozenlist = "1.6.0"
idna = "3.10"
multidict = "6.4.3"
packaging = "25.0"
pefile = "2023.2.7"
propcache = "0.3.1"
psutil = "7.0.0"
pyinstaller = "6.13.0"
pyinstaller-hooks-contrib = "2025.4"
PySide6 = "6.9.0"
PySide6-Addons = "6.9.0"
PySide6-Essentials = "6.9.0"
pywin32-ctypes = "0.2.3"
qasync = "0.27.1"
requests = "2.32.3"
shiboken6 = "6.9.0"
typing-extensions = "^4.14.0"
urllib3 = "2.5.0"
yarl = "1.20.0"
loguru = "^0.7.3"
selenium = "^4.34.2"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
